--- a/The_Shop/composer.json
+++ b/The_Shop/composer.json
@@ -10,12 +10,13 @@
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
+        "symfony/debug": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
+        "symfony/profiler-pack": "^1.0",
         "symfony/twig-bundle": "^4.1",
-        "symfony/web-server-bundle": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
@@ -24,8 +25,8 @@
         "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "^4.1",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/profiler-pack": "^1.0",
-        "symfony/var-dumper": "^3.3|^4.0"
+        "symfony/var-dumper": "^3.3|^4.0",
+        "symfony/web-server-bundle": "^4.1"
     },
     "config": {
         "preferred-install": {
