--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
     "require": {
-        "symfony/http-foundation": "^4.0"
+        "symfony/http-foundation": "^4.0",
+        "symfony/security-bundle": "^4.1"
+    },
+    "require-dev": {
+        "symfony/profiler-pack": "^1.0"
     }
 }
